clusters/oracle-cluster/apps/ai/open-webui/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: ai
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  serviceName: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:latest@sha256:b2c83b5c7b9b244999307b4b1c0e195d41268f3d3a62b84b470c0cea5c5743fd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /app/backend/data
          name: open-webui-volume
      volumes:
      - name: open-webui-volume
        persistentVolumeClaim:
          claimName: open-webui-data-pvc
