clusters/oracle-cluster/apps/ai/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - chat.binarybraids.com
  rules:
  - host: chat.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: open-webui-service
            port: 
              number: 8080
